/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.multiraft.node.v1;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";

message MultiRaftConfig {
    google.protobuf.Duration heartbeat_period = 1 [
        (gogoproto.stdduration) = true
    ];
    google.protobuf.Duration election_timeout = 2 [
        (gogoproto.stdduration) = true
    ];
    uint64 snapshot_entry_threshold = 3;
    uint64 compaction_retain_entries = 4;
    string data_dir = 5;
}

message NodeConfig {
    string host = 1;
    int32 port = 2;
    MultiRaftConfig config = 3 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
}

message GroupConfig {
    uint32 group_id = 1 [
        (gogoproto.customname) = "GroupID",
        (gogoproto.casttype) = "GroupID"
    ];
    uint32 member_id = 2 [
        (gogoproto.customname) = "MemberID",
        (gogoproto.casttype) = "MemberID"
    ];
    MemberRole role = 3;
    repeated MemberConfig members = 4 [
        (gogoproto.nullable) = false
    ];
}

enum MemberRole {
    UNKNOWN = 0;
    MEMBER = 1;
    OBSERVER = 2;
    WITNESS = 3;
}

message MemberConfig {
    uint32 member_id = 1 [
        (gogoproto.customname) = "MemberID",
        (gogoproto.casttype) = "MemberID"
    ];
    string host = 2;
    int32 port = 3;
}

message RaftProposal {
    uint64 term = 1 [
        (gogoproto.casttype) = "Term"
    ];
    uint64 sequence_num = 2 [
        (gogoproto.casttype) = "SequenceNum"
    ];
    bytes data = 3;
}

service Node {
    rpc Bootstrap(BootstrapRequest) returns (BootstrapResponse);
    rpc Join(JoinRequest) returns (JoinResponse);
    rpc Leave(LeaveRequest) returns (LeaveResponse);
    rpc Watch(WatchRequest) returns (stream Event);
}

message BootstrapRequest {
    GroupConfig group = 1 [
        (gogoproto.nullable) = false
    ];
}

message BootstrapResponse {

}

message JoinRequest {
    GroupConfig group = 1 [
        (gogoproto.nullable) = false
    ];
}

message JoinResponse {

}

message LeaveRequest {
    uint32 group_id = 1 [
        (gogoproto.customname) = "GroupID",
        (gogoproto.casttype) = "GroupID"
    ];
}

message LeaveResponse {

}

message WatchRequest {

}

message Event {
    google.protobuf.Timestamp timestamp = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.stdtime) = true
    ];
    oneof event {
        MemberReadyEvent member_ready = 2;
        LeaderUpdatedEvent leader_updated = 3;
        MembershipChangedEvent membership_changed = 4;
        SendSnapshotStartedEvent send_snapshot_started = 5;
        SendSnapshotCompletedEvent send_snapshot_completed = 6;
        SendSnapshotAbortedEvent send_snapshot_aborted = 7;
        SnapshotReceivedEvent snapshot_received = 8;
        SnapshotRecoveredEvent snapshot_recovered = 9;
        SnapshotCreatedEvent snapshot_created = 10;
        SnapshotCompactedEvent snapshot_compacted = 11;
        LogCompactedEvent log_compacted = 12;
        LogDBCompactedEvent logdb_compacted = 13;
        ConnectionEstablishedEvent connection_established = 14;
        ConnectionFailedEvent connection_failed = 15;
    }
}

message ConnectionInfo {
    string address = 1;
    bool snapshot = 2;
}

message MemberEvent {
    uint32 group_id = 1 [
        (gogoproto.customname) = "GroupID",
        (gogoproto.casttype) = "GroupID"
    ];
    uint64 member_id = 2 [
        (gogoproto.customname) = "MemberID",
        (gogoproto.casttype) = "MemberID"
    ];
}

message MemberReadyEvent {
    MemberEvent member = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
}

message MembershipChangedEvent {
    MemberEvent member = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
}

message LeaderUpdatedEvent {
    MemberEvent member = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
    uint64 term = 2 [
        (gogoproto.casttype) = "Term"
    ];
    uint64 leader = 3 [
        (gogoproto.casttype) = "MemberID"
    ];
}


message SendSnapshotStartedEvent {
    MemberEvent member = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
    uint64 index = 2 [
        (gogoproto.casttype) = "Index"
    ];
    uint64 to = 3 [
        (gogoproto.casttype) = "MemberID"
    ];
}

message SendSnapshotCompletedEvent {
    MemberEvent member = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
    uint64 index = 2 [
        (gogoproto.casttype) = "Index"
    ];
    uint64 to = 3 [
        (gogoproto.casttype) = "MemberID"
    ];
}

message SendSnapshotAbortedEvent {
    MemberEvent member = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
    uint64 index = 2 [
        (gogoproto.casttype) = "Index"
    ];
    uint64 to = 3 [
        (gogoproto.casttype) = "MemberID"
    ];
}

message SnapshotReceivedEvent {
    MemberEvent member = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
    uint64 index = 2 [
        (gogoproto.casttype) = "Index"
    ];
    uint64 from = 3 [
        (gogoproto.casttype) = "MemberID"
    ];
}

message SnapshotRecoveredEvent {
    MemberEvent member = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
    uint64 index = 2 [
        (gogoproto.casttype) = "Index"
    ];
}

message SnapshotCreatedEvent {
    MemberEvent member = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
    uint64 index = 2 [
        (gogoproto.casttype) = "Index"
    ];
}

message SnapshotCompactedEvent {
    MemberEvent member = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
    uint64 index = 2 [
        (gogoproto.casttype) = "Index"
    ];
}

message LogEvent {
    MemberEvent member = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
    uint64 index = 2 [
        (gogoproto.casttype) = "Index"
    ];
}

message LogCompactedEvent {
    MemberEvent member = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
    uint64 index = 2 [
        (gogoproto.casttype) = "Index"
    ];
}

message LogDBCompactedEvent {
    MemberEvent member = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
    uint64 index = 2 [
        (gogoproto.casttype) = "Index"
    ];
}

message ConnectionEstablishedEvent {
    ConnectionInfo info = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
}

message ConnectionFailedEvent {
    ConnectionInfo info = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
}
